# 2024-11-mantra-dex

./: Cargo.toml  README-sponsor.md  README.md  justfile  scope.txt
contracts/epoch-manager/: Cargo.toml  README.md
contracts/epoch-manager/src/: commands.rs  contract.rs  error.rs  helpers.rs  lib.rs  queries.rs  state.rs
contracts/epoch-manager/tests/: common.rs  config.rs  epoch.rs  instantiate.rs
contracts/farm-manager/: Cargo.toml  README.md
contracts/farm-manager/src/: contract.rs  error.rs  helpers.rs  lib.rs  queries.rs  state.rs
contracts/farm-manager/src/farm/: commands.rs  mod.rs
contracts/farm-manager/src/farm/tests/: rewards.rs
contracts/farm-manager/src/manager/: commands.rs
contracts/farm-manager/src/position/: commands.rs  helpers.rs
contracts/farm-manager/tests/: integration.rs
contracts/farm-manager/tests/common/: mod.rs  suite.rs  suite_contracts.rs
contracts/fee-collector/: Cargo.toml  README.md
contracts/fee-collector/src/: contract.rs
contracts/fee-collector/tests/: integration.rs
contracts/pool-manager/: Cargo.toml  README.md
contracts/pool-manager/schema/: pool-manager.json
contracts/pool-manager/schema/raw/: execute.json  instantiate.json  query.json  response_to_config.json  response_to_pools.json
contracts/pool-manager/src/: contract.rs  error.rs  helpers.rs  lib.rs  queries.rs  state.rs
contracts/pool-manager/src/liquidity/: commands.rs
contracts/pool-manager/src/manager/: ReadMe.md  commands.rs  update_config.rs
contracts/pool-manager/src/router/: commands.rs
contracts/pool-manager/src/swap/: commands.rs  perform_swap.rs
contracts/pool-manager/src/tests/: integration_tests.rs  suite.rs
docs/: SECURITY.md
scripts/: README.md  get_artifacts_versions.sh
scripts/deployment/: deploy_mantra_dex.sh  deploy_pool.sh
scripts/deployment/deploy_env/: base_env.sh
scripts/deployment/deploy_env/mainnets/: mantra.env
scripts/deployment/deploy_env/testnets/: mantra.env
xtask/: Cargo.toml
xtask/src/: main.rs
