[workspace]
resolver = "2"

members = [
  "packages/*",
  "contracts/pool-manager",
  "contracts/epoch-manager",
  "contracts/farm-manager",
  "contracts/fee-collector",
  "xtask",
]

[workspace.package]
edition = "2021"
homepage = "https://mantra.zone"
documentation = ""
license = "MIT"
repository = "https://github.com/MANTRA-Finance/amm"
publish = false
authors = ["MANTRA Finance"]

[workspace.dependencies]
cosmwasm-schema = { version = "2.1.3" }
cosmwasm-std = { version = "2.1.3", default-features = true, features = [
  "cosmwasm_2_1",
  "stargate",
] }
cw2 = { version = "2.0.0" }
cw-storage-plus = { version = "2.0.0" }
cw-utils = { version = "2.0.0" }
schemars = { version = "0.8.12" }
semver = { version = "1.0.12" }
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.127" }
thiserror = { version = "1.0.43" }
amm = { path = "packages/amm" }
mantra-utils = { path = "packages/utils" }
osmosis-std = { version = "0.26.0" }
common-testing = { path = "packages/common-testing" }
cw-multi-test = { version = "2.1.1", features = [
  "cosmwasm_2_0",
  "staking",
  "stargate",
] }
uint = { version = "0.10.0" }
anyhow = { version = "1.0.71" }
cw-ownable = { version = "2.0.0" }
anybuf = { version = "0.5.0" }
sha2 = { version = "=0.10.8", default-features = false }
test-case = { version = "3.3.1" }
cw-migrate-error-derive = { version = "0.1.0" }
proptest = { version = "1.5.0" }
rand = { version = "0.8.5" }
hex = { version = "0.4.3" }

# contracts
epoch-manager = { path = "contracts/epoch-manager" }
pool-manager = { path = "contracts/pool-manager" }
farm-manager = { path = "contracts/farm-manager" }
fee-collector = { path = "contracts/fee-collector" }

[workspace.metadata.dylint]
libraries = [{ git = "https://github.com/0xFable/cw-lint" }]

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
