[package]
name = "epoch-manager"
version = "1.0.0"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition.workspace = true
description = "The Epoch Manager contract keeps track of epochs."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
semver.workspace = true
thiserror.workspace = true
amm.workspace = true
mantra-utils.workspace = true
cw-ownable.workspace = true
cw-utils.workspace = true
cw-migrate-error-derive.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
