[package]
name = "farm-manager"
version = "1.0.0"
authors = ["Kerber0x <kerber0x@protonmail.com>"]
edition.workspace = true
description = "The Farm Manager is a contract that allows to manage multiple pool farms in a single contract."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
semver.workspace = true
serde.workspace = true
thiserror.workspace = true
amm.workspace = true
mantra-utils.workspace = true
cw-utils.workspace = true
cw-ownable.workspace = true
cw-migrate-error-derive.workspace = true

[dev-dependencies]
cw-multi-test.workspace = true
common-testing.workspace = true
epoch-manager.workspace = true
anyhow.workspace = true
pool-manager.workspace = true
fee-collector.workspace = true
